--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body {
 .form-control i{
     visibility: hidden;
     position: absolute;
-    top: 40px;
+    top: 35px;
     right: 15px;
 }
 
@@ -104,4 +104,24 @@ body {
     display: block;
     width: 100%;
     border-radius: 4px;
+    cursor: pointer;
+}
+
+#sign-in{
+    text-align: center;
+    padding: 10px;
+    font-family: inherit;
+}
+
+#back-btn{
+    background-color: rgb(110, 2, 114);
+    color: white;
+    border: 2px solid rgb(110, 2, 114);
+    padding: 10px;
+    font-family: inherit;
+    font-size: 16px;
+    display: block;
+    width: 100%;
+    border-radius: 4px;
+    cursor: pointer;
 }
